# simple-yaml-task-runner

./: Cargo.toml  README.md
src/: main.rs
