[package]
name = "simple-yaml-task-runner"
version = "0.1.0"
description = "a simple reference implementation of abstract-pipeline-runner"
authors = ["nikita-skobov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
context_based_variable_substitution = { git = "https://github.com/nikita-skobov/context-based-variable-substitution" }
yaml_variable_substitution = { git = "https://github.com/nikita-skobov/yaml-variable-substitution" }
abstract_pipeline_runner = { git = "https://github.com/nikita-skobov/abstract-pipeline-runner" }
ansi_term = "0.12"

[[bin]]
name = "sytr"
path = "src/main.rs"
